kubernetes/apps/platform/mastodon/base/resources/networking/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon
  namespace: mastodon
spec:
  parentRefs:
    - name: external
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/streaming
      backendRefs:
        - name: mastodon-streaming
          port: 4000
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Onion-Location
                value: "http://eopvgbrhvri7tj2gbvssa3zpgxzm6rbwf6ozmk33elox3kce3zo75gid.onion"
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mastodon-web
          port: 3000
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Onion-Location
                value: "http://eopvgbrhvri7tj2gbvssa3zpgxzm6rbwf6ozmk33elox3kce3zo75gid.onion"
